--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/cchester11/calculator/issues"
   },
-  "homepage": "https://github.com/cchester11/calculator#readme"
+  "homepage": "https://github.com/cchester11/calculator#readme",
+  "dependencies": {
+    "jquery": "^3.6.3"
+  }
 }
